--- a/okamotoFramework-config.yaml
+++ b/okamotoFramework-config.yaml
@@ -11,11 +11,17 @@ global-forwards: #アプリケーション共通のフォワード定義
    #contextRelative:
    #module:
    #className:
+ - name: link
+   path: test_link.jsp
+   redirect: #redirectするかforwardするかをtrueかfalseで指定。（trueがredirect）
+   #contextRelative:
+   #module:
+   #className:
 action-mappings: #属性は順不動
- - name: #このアクションで使用するToオブジェクト
+ - input: #このアクションの入力ページ(jspかアプリ画面)の識別子
+   name: #このアクションで使用するToオブジェクト
    type: #呼び出すアクションを実装しているアクションクラス
    path: #呼び出すアクション
-   input: #このアクションの入力ページ(jsp)
    scope: request #requestかsessionを指定可能。sessionが指定されていた場合は、sessionにname属性の値でtoを格納する。
    forward: #アクションごとのフォワード定義
     - name: success #遷移先の論理名
@@ -33,10 +39,10 @@ action-mappings: #属性は順不動
    #prefix:
    #unknown:
    #validate:
- - name: #このアクションで使用するToオブジェクト
+ - input: #このアクションの入力ページ(jspかアプリ画面)の識別子
+   name: #このアクションで使用するToオブジェクト
    type: #呼び出すアクションを実装しているアクションクラス
    path: #呼び出すアクション
-   input: #このアクションの入力ページ(jsp)
    scope: request #requestかsessionを指定可能。sessionが指定されていた場合は、sessionにname属性の値でtoを格納する。
    forward: #アクションごとのフォワード定義
    - name: success #遷移先の論理名
